--- a/codingTask/codingTask/View/TableViewCell/CatagoryTableViewCell.xib
+++ b/codingTask/codingTask/View/TableViewCell/CatagoryTableViewCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -54,6 +55,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <color key="backgroundColor" systemColor="systemGray6Color"/>
                 <constraints>
                     <constraint firstItem="PVJ-bT-kSn" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="17" id="0X6-YR-xmN"/>
                     <constraint firstItem="hyw-ff-2Eu" firstAttribute="leading" secondItem="PVJ-bT-kSn" secondAttribute="trailing" constant="11" id="44C-ei-KyV"/>
@@ -72,6 +74,7 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="foodImageView" destination="hyw-ff-2Eu" id="dUh-Xx-eoN"/>
+                <outlet property="foodLogo" destination="hyw-ff-2Eu" id="gea-zO-z8H"/>
                 <outlet property="priceLabel" destination="KqK-Fg-Ofp" id="lPY-E0-AXf"/>
                 <outlet property="productDescriptionLabel" destination="U5w-6j-qw5" id="IK2-dy-132"/>
                 <outlet property="productNameLabel" destination="PVJ-bT-kSn" id="H7f-R7-NHV"/>
@@ -80,6 +83,9 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="logo" width="120" height="120"/>
+        <image name="logo" width="500" height="500"/>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
