--- a/codingTask/codingTask/View/TableViewCell/CatagoryTableViewCell.xib
+++ b/codingTask/codingTask/View/TableViewCell/CatagoryTableViewCell.xib
@@ -17,18 +17,18 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Iced American Coffee" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PVJ-bT-kSn">
-                        <rect key="frame" x="16" y="17" width="200" height="25"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Iced American Coffee" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PVJ-bT-kSn">
+                        <rect key="frame" x="16" y="3" width="200" height="44"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="200" id="Irt-iu-Ub3"/>
-                            <constraint firstAttribute="height" constant="25" id="jnw-g6-tMc"/>
+                            <constraint firstAttribute="height" constant="44" id="jnw-g6-tMc"/>
                         </constraints>
-                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="KD 1.000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KqK-Fg-Ofp">
-                        <rect key="frame" x="16" y="74.666666666666671" width="200" height="17.666666666666671"/>
+                        <rect key="frame" x="16" y="82.666666666666671" width="200" height="17.666666666666671"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="17.670000000000002" id="5BX-Ym-uxb"/>
                             <constraint firstAttribute="width" constant="200" id="eDt-Re-QhX"/>
@@ -44,28 +44,28 @@
                             <constraint firstAttribute="width" constant="75" id="rCv-2z-I08"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Espresso, water and ice" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U5w-6j-qw5">
-                        <rect key="frame" x="16" y="46" width="200" height="20.666666666666671"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Espresso, water and ice" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U5w-6j-qw5">
+                        <rect key="frame" x="16" y="46" width="200" height="36"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="200" id="dXW-sJ-eTL"/>
-                            <constraint firstAttribute="height" constant="20.670000000000002" id="m4F-KH-GRN"/>
+                            <constraint firstAttribute="height" constant="36" id="m4F-KH-GRN"/>
                         </constraints>
-                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <color key="backgroundColor" systemColor="systemGray6Color"/>
                 <constraints>
-                    <constraint firstItem="PVJ-bT-kSn" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="17" id="0X6-YR-xmN"/>
+                    <constraint firstItem="PVJ-bT-kSn" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="3" id="0X6-YR-xmN"/>
                     <constraint firstItem="hyw-ff-2Eu" firstAttribute="leading" secondItem="PVJ-bT-kSn" secondAttribute="trailing" constant="11" id="44C-ei-KyV"/>
                     <constraint firstItem="U5w-6j-qw5" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="8wB-Di-daf"/>
                     <constraint firstItem="KqK-Fg-Ofp" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="IPb-Is-rTq"/>
-                    <constraint firstItem="U5w-6j-qw5" firstAttribute="top" secondItem="PVJ-bT-kSn" secondAttribute="bottom" constant="4" id="QjJ-VS-SmQ"/>
+                    <constraint firstItem="U5w-6j-qw5" firstAttribute="top" secondItem="PVJ-bT-kSn" secondAttribute="bottom" constant="-1" id="QjJ-VS-SmQ"/>
                     <constraint firstAttribute="trailing" secondItem="hyw-ff-2Eu" secondAttribute="trailing" constant="18" id="YmE-tz-zK0"/>
                     <constraint firstItem="hyw-ff-2Eu" firstAttribute="leading" secondItem="KqK-Fg-Ofp" secondAttribute="trailing" constant="11" id="d9o-cy-J4x"/>
-                    <constraint firstAttribute="bottom" secondItem="KqK-Fg-Ofp" secondAttribute="bottom" constant="27.666666666666657" id="eQ5-2o-ZqM"/>
-                    <constraint firstItem="KqK-Fg-Ofp" firstAttribute="top" secondItem="U5w-6j-qw5" secondAttribute="bottom" constant="7.9999999999999858" id="pP0-1L-bew"/>
+                    <constraint firstAttribute="bottom" secondItem="KqK-Fg-Ofp" secondAttribute="bottom" constant="19.666666666666657" id="eQ5-2o-ZqM"/>
+                    <constraint firstItem="KqK-Fg-Ofp" firstAttribute="top" secondItem="U5w-6j-qw5" secondAttribute="bottom" constant="0.6666666666666714" id="pP0-1L-bew"/>
                     <constraint firstAttribute="bottom" secondItem="hyw-ff-2Eu" secondAttribute="bottom" constant="28" id="qJp-IY-xLN"/>
                     <constraint firstItem="hyw-ff-2Eu" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="17" id="wnz-6A-GAf"/>
                     <constraint firstItem="PVJ-bT-kSn" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="yfq-Zs-S4b"/>
@@ -85,7 +85,7 @@
     <resources>
         <image name="logo" width="500" height="500"/>
         <systemColor name="systemGray6Color">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
